#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-66
2016-03-17 Mikhail S. Dubrovin
- NDArrIO.py - add parameter "addmetad" to save_txt

Tag: V00-02-65
2015-03-05 Mikhail S. Dubrovin
- GeometryObject.py add protection for wrong size and shape 
	in two2x1ToData2x2 and data2x2ToTwo2x1
	
Tag: V00-02-64
2015-02-25 Mikhail S. Dubrovin
- NDArrIO.py - cosmetic improvement in print statement.
	
Tag: V00-02-63
2015-02-22 Mikhail S. Dubrovin
- Support of geometry for matrix-sensors of variable shape. 
	Assuming that sensor name contains paramaters, ex: MTRX:512:512:54:54
- CalibParsBaseAndor3dV1.py - set rows=cols=0 - for variable size arrays
- GenericCalibPars.py - switch to NDArrIO.load_txt in stead of np.loadtxt
- SegGeometryMatrixV1.py - Remove singleton seg_andor3d, addn method matrix_pars(segname)
- SegGeometryStore.py use MTRX:512:512:54:54 in stead of ANDOR3D:V1

Tag: V00-02-62
2015-02-19 Mikhail S. Dubrovin
- add NDArrIO.py, in GlobalUtils.py add str_tstamp, get_enviroment.
- GeometryAccess.py - add point_coord_indexes, improve caching of parameters, update documentation
	
Tag: V00-02-61
2015-02-09 Mikhail S. Dubrovin
- add src/CalibParsBaseAndor3dV1.py - which was forgotten at last commit 
	
Tag: V00-02-60
2015-02-08 Mikhail S. Dubrovin
- add support for Andor3d (PSAS-139)
  update modules GlobalUtils.py, CalibParsStore.py, SegGeometryMatrixV1.py, SegGeometryStore.py 
  update modules CalibParsStore.h, GenericCalibPars.cpp
	
Tag: V00-02-59
2015-12-17 Mikhail S. Dubrovin
- GeometryAccess.(h,cpp) - change m_dict_of_comments map[string]=string to map[int]=string (PSAS-11)